cabal-version: 3.0
name: message-db-vs-kiroku
version: 0.1.0.0
build-type: Simple

executable message-db-vs-kiroku
  main-is: Main.hs
  hs-source-dirs: app
  default-language: GHC2024
  default-extensions:
    BlockArguments
    DeriveGeneric
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >= 2.2
    , async >= 2.2
    , base >= 4.21 && < 5
    , bytestring >= 0.12
    , ephemeral-pg >= 0.2
    , generic-lens >= 2.2
    , hasql >= 1.10
    , kiroku-store >= 0.1
    , lens >= 5.2
    , message-db-hs
    , text >= 2.1
    , time >= 1.12
    , uuid >= 1.3
    , vector >= 0.13
