cabal-version:      3.0
name:               codec-spike
version:            0.0.0
synopsis:           Throwaway spike validating the keiro codec layer (EP-2).
description:
    Implements a value-level Codec e record (encode + decode + tag +
    version + upcaster chain) and round-trips a sample Order
    aggregate's events through it on a real ephemeral Postgres
    instance, including a v1 -> v2 schema migration handled at
    decode time. Validates the M0 verdict (selectively borrow from
    hindsight; keep the codec value-level).
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
build-type:         Simple
tested-with:        GHC == 9.12.*

common shared
    default-language:   GHC2024
    default-extensions: BlockArguments
                        DataKinds
                        DeriveAnyClass
                        DerivingStrategies
                        DuplicateRecordFields
                        OverloadedLabels
                        OverloadedRecordDot
                        OverloadedStrings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

library
    import:             shared
    hs-source-dirs:     src
    exposed-modules:    Spike.Codec
                        Spike.Order
    build-depends:      aeson           >= 2.1   && < 2.3,
                        aeson-pretty    >= 0.8,
                        base            ^>= 4.21,
                        bytestring      >= 0.11,
                        containers      >= 0.6,
                        kiroku-store,
                        text            >= 2.0,
                        unordered-containers >= 0.2

executable spike
    import:             shared
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      QuickCheck      >= 2.14,
                        aeson,
                        base,
                        bytestring,
                        codec-spike,
                        effectful       >= 2.4,
                        effectful-core  >= 2.4,
                        ephemeral-pg    >= 0.2,
                        hasql           >= 1.10,
                        hasql-pool      >= 1.2,
                        kiroku-store,
                        text,
                        vector
